--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,9 +108,13 @@ documentation = "https://docs.saleor.io/"
   pytest-xdist = "^2.2.1"
   tox = "^3.23.1"
   transifex-client = "^0"
-  django-stubs = "1.2"
-  mypy = "0.740"
+  mypy = "0.910"
   pywatchman = "^1.4.1"
+  types-requests = "^2.25.0"
+  types-pytz = "^2021.1.0"
+  types-pkg-resources = "^0.1.3"
+  types-python-dateutil = "^0.1.4"
+  django-stubs = "^1.8.0"
 
 [tool.black]
 target_version = [ "py35", "py36", "py37", "py38" ]
