--- a/.github/workflows/publish-containers.yml
+++ b/.github/workflows/publish-containers.yml
@@ -2,12 +2,8 @@ name: Publish
 
 on:
   push:
-    tags:
-      # Matches stable and pre-releases
-      - "[0-9]+.[0-9]+.[0-9]+*"
     branches:
-      - master
-      - ci/*
+      - anezka
 
 jobs:
   docker:
@@ -56,29 +52,6 @@ jobs:
           CONTAINER_TAGS=${TAGS}
           NAMED_VERSION=${NAMED_VERSION}" >> "${GITHUB_ENV}"
 
-      # Outputs the containers tags for staging branches
-      # Only publishes them onto Docker Hub
-      - name: Prepare Tags for Staging
-        id: staging
-        if: ${{ startsWith(github.ref, 'refs/heads/') }}
-        run: |
-          # Version name is the branch name
-          # Slashes are substitued by dashes
-          NAMED_VERSION=$(echo ${GITHUB_REF#refs/heads/} | tr / -)
-          SHA=${GITHUB_SHA}
-
-          # Target Docker Hub with the SHA value
-          # and branch name
-          TAGS=$"\
-          ${{ steps.image.outputs.image_name }}:${NAMED_VERSION},\
-          ${{ steps.image.outputs.image_name }}:sha-${SHA}\
-          "
-
-          # Output the target tags
-          echo "
-          CONTAINER_TAGS=${TAGS}
-          NAMED_VERSION=${NAMED_VERSION}" >> "${GITHUB_ENV}"
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
@@ -96,20 +69,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Login to DockerHub
-        if: ${{ startsWith(github.ref, 'refs/heads/') }}
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Login to GitHub Container Registry
-        if: ${{ startsWith(github.ref, 'refs/tags/') }}
-        uses: docker/login-action@v1
+      - uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.CR_USERNAME }}
-          password: ${{ secrets.CR_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push
         id: docker_build
@@ -118,7 +82,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./
           platforms: linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ env.CONTAINER_TAGS }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
