--- a/.github/workflows/publish-containers.yml
+++ b/.github/workflows/publish-containers.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Set output
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF##*/}
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
       - name: Check output
         env:
